fetures section complete

--- a/index.html
+++ b/index.html
@@ -572,15 +572,16 @@
                           font-weight: 300;
                           font-size: 26px;
                           color: #7f8887;
+                          padding-bottom: 40px;
                         "
                       >
                         Features <strong>All Joined Together</strong> in One App
                       </h3>
                     </td>
                   </tr>
-                  <!-- SYNC COLUMN START -->
                   <tr>
                     <td>
+                   <!-- SYNC COLUMN START -->
                       <table
                         width="33.33%"
                         align="left"
@@ -639,10 +640,129 @@
                           </td>
                         </tr>
                       </table>
+                      <!-- SYNC COLUMN END -->
+                      <table
+                        width="33.33%"
+                        align="left"
+                        border="0"
+                        cellspacing="0"
+                        cellpadding="0"
+                        style="padding: 0px 0px 0px 0px; background: white"
+                      >
+                        <tr>
+                          <td align="center">
+                            <img src="./images/watch_screen.png" alt="" />
+                          </td>
+                        </tr>
+                        <tr>
+                          <td align="center">
+                            <h5
+                              style="
+                                color: #333;
+                                font-family: 'Open Sans', sans-serif;
+                                font-weight: 600;
+                                font-size: 12px;
+                                padding-left: 12px;
+                              "
+                            >
+                              SHARE
+                            </h5>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td align="center">
+                            <p
+                              style="
+                                line-height: 1.6;
+                                color: #7f8887;
+                                font-weight: 400;
+                                margin-top: -15px;
+                              "
+                            >
+                              Lorem ipsum dolor sit amet consectetur.
+                            </p>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td align="center">
+                            <a
+                              style="
+                                color: #2792ec;
+                                font-family: 'Open Sans', sans-serif;
+                                font-weight: 300;
+                                font-size: 12px;
+                                text-decoration: none;
+                              "
+                              href="#"
+                              >Learn More</a
+                            >
+                          </td>
+                        </tr>
+                      </table>
+                      <!-- SYNC COLUMN END -->
+                      <table
+                        width="33.33%"
+                        align="left"
+                        border="0"
+                        cellspacing="0"
+                        cellpadding="0"
+                        style="padding: 0px 0px 0px 0px; background: white"
+                      >
+                        <tr>
+                          <td align="center">
+                            <img src="./images/watch_screen.png" alt="" />
+                          </td>
+                        </tr>
+                        <tr>
+                          <td align="center">
+                            <h5
+                              style="
+                                color: #333;
+                                font-family: 'Open Sans', sans-serif;
+                                font-weight: 600;
+                                font-size: 12px;
+                                padding-left: 12px;
+                              "
+                            >
+                            STATS
+                            </h5>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td align="center">
+                            <p
+                              style="
+                                line-height: 1.6;
+                                color: #7f8887;
+                                font-weight: 400;
+                                margin-top: -15px;
+                              "
+                            >
+                              Lorem ipsum dolor sit amet consectetur.
+                            </p>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td align="center">
+                            <a
+                              style="
+                                color: #2792ec;
+                                font-family: 'Open Sans', sans-serif;
+                                font-weight: 300;
+                                font-size: 12px;
+                                text-decoration: none;
+                              "
+                              href="#"
+                              >Learn More</a
+                            >
+                          </td>
+                        </tr>
+                      </table>
+                      <!-- SYNC COLUMN END -->
                     </td>
                   </tr>
                   <!-- SYNC COLUMN END -->
-                </table>
+                  
               </td>
             </tr>
             <!-- ROW 5 END -->
